# mini-app-tg-gpt

./: .gitignore  Dockerfile  agents.md  alembic.ini  main.py  pyproject.toml  pytest.ini  start_server_bot.bat
.lovable/state/: current.md
app/api/: access_code_helpers.py  access_codes.py  admin_broadcast.py  auth.py  auth_helpers.py  chat_folder_helpers.py  chat_folders.py  chat_helpers.py  chat_starters.py  chat_starters_helpers.py  conversion.py  conversion_helpers.py  dependencies.py  document_helpers.py  documents.py  helpers.py  images.py  metrics.py  model_catalog_helpers.py  models_catalog.py  payment_helpers.py  payments.py  personalization.py  personalization_helpers.py  routes.py  tier_helpers.py  tiers.py  usage_pack_helpers.py  usage_packs.py  user_settings.py  user_subscription.py  user_subscription_helpers.py  user_usage.py  user_usage_helpers.py  whats_new.py  whats_new_helpers.py
app/bot/: bot_main.py  main.py
app/core/: config.py  metrics.py  security.py  sentry_setup.py
app/db/: database.py  models.py  (+2 more)
docs/: frontend-release-handoff.md  google-image-pricing.md
jobs/: check_subscriptions.py  cleanup_derived.py  cleanup_documents.py  conversation_search_worker.py
k8s/: migrate-job.yaml.tpl  prometheusrule-pgbackrest.yaml
migrations/: env.py
scripts/: patch-backend-probes-resources.json  patch-backend-probes.json  patch-frontend-resources.json  pgbackrest-r2-patch.json
tests/: conftest.py  test_admin_broadcast.py  test_bot_entrypoint_dependencies.py  test_chat_tool_choice_normalization.py  test_conversation_auth_filters.py  test_conversation_search_semantic.py  test_conversation_stream_docs.py  test_conversion_state_endpoint.py  test_create_message_response_fields.py  test_document_provider_fallback.py  test_event_bus.py  test_google_image_canonicalization.py  test_google_image_pricing_migration.py  test_google_interactions.py  test_google_provider_contracts.py  test_history_building.py  test_idempotency_ledger.py  test_image_asset_retention.py  test_image_assets.py  test_image_deriver.py  test_image_energy_usage.py  test_image_entitlement_priority.py  test_image_entitlement_quality_limits.py  test_image_pipeline.py  test_image_proxy_route.py  test_image_shared_pool.py  test_image_tool_config.py  test_image_upload_route.py  test_message_mutations.py  test_mock_usage_pack_purchase.py  test_models_catalog_endpoint.py  test_openai_chain_behaviors.py  test_openai_reasoning_controls.py  test_payment_binding_flow.py  test_payment_discounts.py  test_payment_status_auth.py  test_perplexity_provider.py  test_personalization_helpers.py  test_premium_samples.py  test_r2_and_db_integration.py  (+15 more)
(+134 files in other folders)
