[tool.poetry]
name = "mini-app-tg-gpt"
version = "0.1.0"
description = ""
authors = ["l1ghtny <ankoshenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.24"

[tool.poetry.dependencies]
python = "^3.13"
openai = ">=1.109.1"
python-dotenv = ">=1.0.1"
sqlmodel = ">=0.0.25"
SQLAlchemy = ">=2.0.30"
python-telegram-bot = ">=21.4"
requests = ">=2.31.0"
langchain = ">=0.0.268"
typing_extensions = ">=4.11.0"
langgraph = ">=0.1.6"
langchain-openai = ">=0.1.15"
fastapi = {extras = ["standard"], version = "^0.118.0"}
pydantic = ">=2.5.2"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.17.0"
redis = "^7.0.1"
sse-starlette = "^3.0.2"
aioboto3 = "^15.5.0"
pillow = "^12.0.0"
pillow-heif = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
